--- a/scripts/chip_molded/ipc7351B_smd_two_terminal.yaml
+++ b/scripts/chip_molded/ipc7351B_smd_two_terminal.yaml
@@ -66,7 +66,10 @@ ipc_spec_larger_or_equal_0603:
         side: 0.05
 
 
-# tantalum cap
+# molded indcutors, diodes, and tantalum caps
+# These packages have inward-facing flat L-leads.
+# Heel and toe values are flipped from the IPC table since the lead end is under the part body and
+# uses the toe (not heel) fillet goal. This was easier than changing the script for this package.
 #           | Minimum | Median    | Maximum
 #           | (Least) | (Nominal) | (Most)
 #           | Density | Density   | Density
@@ -79,24 +82,25 @@ ipc_spec_larger_or_equal_0603:
 
 ipc_spec_tantalum:
     least:
-        toe: 0.07
-        heel: 0.2
+        toe: 0.2
+        heel: 0.07
         side: -0.1
         courtyard: 0.1
     nominal:
-        toe: 0.15
-        heel: 0.5
+        toe: 0.2 #0.5
+        heel: 0.07 #0.15
         side: -0.05
         courtyard: 0.25
     most:
-        toe: 0.25
-        heel: 0.8
+        toe: 0.8
+        heel: 0.25
         side: 0.01
         courtyard: 0.5
     round_base:
         toe: 0.05
         heel: 0.05
         side: 0.05
+
 
 # castellated
 # The document is a bit strange with the castellated definitions.
@@ -105,7 +109,6 @@ ipc_spec_tantalum:
 # But for castellated they tell us that the heel fillet is responsible for the Z measurement.
 # As the script interprets toe to point outwards (=Z dim) we change these two compared to the
 # ipc document.
-
 #           | Minimum | Median    | Maximum
 #           | (Least) | (Nominal) | (Most)
 #           | Density | Density   | Density
