--- a/scripts/chip_molded/part_definitions.yaml
+++ b/scripts/chip_molded/part_definitions.yaml
@@ -45,6 +45,34 @@ resistor_handsolder:
     pad_length_addition: 0.35
     suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
     include_suffix_in_3dpath: 'False'
+
+resistor_handsolder_smaller_0603:
+    fp_lib_name: 'Resistor_SMD'
+    size_definitions: ['resistor_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'R'
+    description: 'Resistor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'resistor handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+
+resistor_handsolder_smaller_0402:
+    fp_lib_name: 'Resistor_SMD'
+    size_definitions: ['default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'R'
+    description: 'Resistor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'resistor handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+    paste_pad:
+        all_sides_rel: 0.9 #-10%
+        heel_abs: -0.05 # additional heel reduction
+
 ######################################################################################
 
 capacitor:
@@ -95,6 +123,33 @@ capacitor_handsolder:
     suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
     include_suffix_in_3dpath: 'False'
 
+capacitor_handsolder_smaller_0603:
+    fp_lib_name: 'Capacitor_SMD'
+    size_definitions: ['capacitor_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'C'
+    description: 'Capacitor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'capacitor handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+
+capacitor_handsolder_smaller_0402:
+    fp_lib_name: 'Capacitor_SMD'
+    size_definitions: ['default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'C'
+    description: 'Capacitor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'capacitor handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+    paste_pad:
+        all_sides_rel: 0.9 #-10%
+        heel_abs: -0.05 # additional heel reduction
+
 capacitor_tantalum:
     fp_lib_name: 'Capacitor_Tantalum_SMD'
     size_definitions: ['capacitor_tantalum.yaml']
@@ -119,11 +174,12 @@ capacitor_tantalum_handsolder:
     suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
     include_suffix_in_3dpath: 'False'
     polarization_mark: 'True'
+
 ######################################################################################
 
 inductor:
     fp_lib_name: 'Inductor_SMD'
-    size_definitions: ['default_chip.yaml', 'inductor.yaml'] # specific inductor size definitions overwrite generic ones, and IPC doesn't give 0402 or 0603 inductor chip dimensions
+    size_definitions: ['default_chip.yaml', 'inductor.yaml'] # specific inductor size definitions overwrite generic ones, and IPC doesn't give smaller than 0805 chip dimensions
     ipc_reference: "ipc_spec_larger_or_equal_0603"
     prefix: 'L'
     description: 'Inductor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -159,7 +215,7 @@ inductor_smaller_0402:
 
 inductor_handsolder:
     fp_lib_name: 'Inductor_SMD'
-    size_definitions: ['default_chip.yaml', 'inductor.yaml'] # inductor size definitions overwrite generic ones
+    size_definitions: ['default_chip.yaml', 'inductor.yaml'] # specific inductor size definitions overwrite generic ones, and IPC doesn't give smaller than 0805 chip dimensions
     ipc_reference: "ipc_spec_larger_or_equal_0603"
     prefix: 'L'
     description: 'Inductor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
@@ -168,6 +224,34 @@ inductor_handsolder:
     pad_length_addition: 0.35
     suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
     include_suffix_in_3dpath: 'False'
+
+inductor_handsolder_smaller_0603:
+    fp_lib_name: 'Inductor_SMD'
+    size_definitions: ['default_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'L'
+    description: 'Inductor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'inductor handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+
+inductor_handsolder_smaller_0402:
+    fp_lib_name: 'Inductor_SMD'
+    size_definitions: ['default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'L'
+    description: 'Inductor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'inductor handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+    paste_pad:
+        all_sides_rel: 0.9 #-10%
+        heel_abs: -0.05 # additional heel reduction
+
 ######################################################################################
 
 diode:
@@ -196,7 +280,7 @@ diode_smaller_0603:
 
 diode_smaller_0402:
     fp_lib_name: 'Diode_SMD'
-    size_definitions: ['default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
+    size_definitions: ['default_chip_smaller_0402.yaml']
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'D'
     description: 'Diode SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -222,6 +306,35 @@ diode_handsolder:
     suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
     include_suffix_in_3dpath: 'False'
 
+diode_handsolder_smaller_0603:
+    fp_lib_name: 'Diode_SMD'
+    size_definitions: ['default_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'D'
+    description: 'Diode SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'diode handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    polarization_mark: 'True'
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+
+diode_handsolder_smaller_0402:
+    fp_lib_name: 'Diode_SMD'
+    size_definitions: ['default_chip_smaller_0402.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'D'
+    description: 'Diode SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'diode handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    polarization_mark: 'True'
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+    paste_pad:
+        all_sides_rel: 0.9 #-10%
+        heel_abs: -0.05 # additional heel reduction
+
 diode_castellated:
     fp_lib_name: 'Diode_SMD'
     size_definitions: ['default_chip.yaml', 'diode.yaml']
@@ -233,6 +346,34 @@ diode_castellated:
     pad_length_addition: 0
     polarization_mark: 'True'
     suffix: "_Castellated"
+
+diode_castellated_smaller_0603:
+    fp_lib_name: 'Diode_SMD'
+    size_definitions: ['default_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_castellated"
+    prefix: 'D'
+    description: 'Diode SMD {code_imperial:s} ({code_metric:s} Metric), castellated end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'diode castellated'
+    ipc_density: 'nominal'
+    pad_length_addition: 0
+    polarization_mark: 'True'
+    suffix: "_Castellated"
+
+diode_castellated_smaller_0402:
+    fp_lib_name: 'Diode_SMD'
+    size_definitions: ['default_chip_smaller_0402.yaml']
+    ipc_reference: "ipc_spec_castellated"
+    prefix: 'D'
+    description: 'Diode SMD {code_imperial:s} ({code_metric:s} Metric), castellated end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'diode castellated'
+    ipc_density: 'nominal'
+    pad_length_addition: 0
+    polarization_mark: 'True'
+    suffix: "_Castellated"
+    paste_pad:
+        all_sides_rel: 0.9 #-10%
+        heel_abs: -0.05 # additional heel reduction
+
 ######################################################################################
 
 led:
@@ -261,7 +402,7 @@ led_smaller_0603:
 
 led_smaller_0402:
     fp_lib_name: 'LED_SMD'
-    size_definitions: ['default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
+    size_definitions: ['led_chip_smaller_0402.yaml']
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'LED'
     description: 'LED SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -287,6 +428,35 @@ led_handsolder:
     suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
     include_suffix_in_3dpath: 'False'
 
+led_handsolder_smaller_0603:
+    fp_lib_name: 'LED_SMD'
+    size_definitions: ['default_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'LED'
+    description: 'LED SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'LED handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    polarization_mark: 'True'
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+
+led_handsolder_smaller_0402:
+    fp_lib_name: 'LED_SMD'
+    size_definitions: ['led_chip_smaller_0402.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'LED'
+    description: 'LED SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'LED handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    polarization_mark: 'True'
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+    paste_pad:
+        all_sides_rel: 0.9 #-10%
+        heel_abs: -0.05 # additional heel reduction
+
 led_castellated:
     fp_lib_name: 'LED_SMD'
     size_definitions: ['default_chip.yaml']
@@ -299,7 +469,35 @@ led_castellated:
     polarization_mark: 'True'
     suffix: "_Castellated"
 
+led_castellated_smaller_0603:
+    fp_lib_name: 'LED_SMD'
+    size_definitions: ['default_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_castellated"
+    prefix: 'LED'
+    description: 'LED SMD {code_imperial:s} ({code_metric:s} Metric), castellated end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'LED castellated'
+    ipc_density: 'nominal'
+    pad_length_addition: 0
+    polarization_mark: 'True'
+    suffix: "_Castellated"
+
+led_castellated_smaller_0402:
+    fp_lib_name: 'LED_SMD'
+    size_definitions: ['led_chip_smaller_0402.yaml']
+    ipc_reference: "ipc_spec_castellated"
+    prefix: 'LED'
+    description: 'LED SMD {code_imperial:s} ({code_metric:s} Metric), castellated end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'LED castellated'
+    ipc_density: 'nominal'
+    pad_length_addition: 0
+    polarization_mark: 'True'
+    suffix: "_Castellated"
+    paste_pad:
+        all_sides_rel: 0.9 #-10%
+        heel_abs: -0.05 # additional heel reduction
+
 ###############################################################################
+
 fuse:
     fp_lib_name: 'Fuse'
     size_definitions: ['default_chip.yaml', 'fuse.yaml']
@@ -322,20 +520,6 @@ fuse_smaller_0603:
     pad_length_addition: 0
     suffix: ""
 
-fuse_smaller_0402:
-    fp_lib_name: 'Fuse'
-    size_definitions: ['default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
-    ipc_reference: "ipc_spec_smaller_0603"
-    prefix: 'Fuse'
-    description: 'Fuse SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
-    keywords: 'fuse'
-    ipc_density: 'nominal'
-    pad_length_addition: 0
-    suffix: ""
-    paste_pad:
-        all_sides_rel: 0.9 #-10%
-        heel_abs: -0.05 # additional heel reduction
-
 fuse_handsolder:
     fp_lib_name: 'Fuse'
     size_definitions: ['default_chip.yaml', 'fuse.yaml']
@@ -348,9 +532,32 @@ fuse_handsolder:
     suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
     include_suffix_in_3dpath: 'False'
 
+fuse_handsolder_smaller_0603:
+    fp_lib_name: 'Fuse'
+    size_definitions: ['default_chip_smaller_0603.yaml']
+    ipc_reference: "ipc_spec_smaller_0603"
+    prefix: 'Fuse'
+    description: 'Fuse SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal with elongated pad for handsoldering. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'fuse handsolder'
+    ipc_density: 'nominal'
+    pad_length_addition: 0.35
+    suffix: "_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder"
+    include_suffix_in_3dpath: 'False'
+
 fuse_castellated:
     fp_lib_name: 'Fuse'
     size_definitions: ['default_chip.yaml', 'fuse.yaml']
+    ipc_reference: "ipc_spec_castellated"
+    prefix: 'Fuse'
+    description: 'Fuse SMD {code_imperial:s} ({code_metric:s} Metric), castellated end terminal, IPC_7351. {size_info:s}, generated with kicad-footprint-generator'
+    keywords: 'fuse castellated'
+    ipc_density: 'nominal'
+    pad_length_addition: 0
+    suffix: "_Castellated"
+
+fuse_castellated_smaller_0603:
+    fp_lib_name: 'Fuse'
+    size_definitions: ['default_chip_smaller_0603.yaml']
     ipc_reference: "ipc_spec_castellated"
     prefix: 'Fuse'
     description: 'Fuse SMD {code_imperial:s} ({code_metric:s} Metric), castellated end terminal, IPC_7351. {size_info:s}, generated with kicad-footprint-generator'
