--- a/scripts/SMD_2terminal_chip_molded/size_definitions/capacitor_chip_smaller_0603.yaml
+++ b/scripts/SMD_2terminal_chip_molded/size_definitions/capacitor_chip_smaller_0603.yaml
@@ -11,6 +11,7 @@ C_0402:
         minimum: 0.1
         maximum: 0.3
     size_info: '(Body size source: IPC-SM-782 page 76, https://www.pcb-3d.com/wordpress/wp-content/uploads/ipc-sm-782a_amendment_1_and_2.pdf)'
+    ipc_reference: "ipc_spec_smaller_0603"
 
 C_0504:
     code_imperial: "0504"
@@ -25,3 +26,4 @@ C_0504:
         minimum: 0.13
         maximum: 0.38
     size_info: '(Body size source: IPC-SM-782 page 76, https://www.pcb-3d.com/wordpress/wp-content/uploads/ipc-sm-782a_amendment_1_and_2.pdf)'
+    ipc_reference: "ipc_spec_smaller_0603"
