--- a/scripts/SMD_2terminal_chip_molded/size_definitions/resistor_chip_smaller_0603.yaml
+++ b/scripts/SMD_2terminal_chip_molded/size_definitions/resistor_chip_smaller_0603.yaml
@@ -11,3 +11,4 @@ R_0402:
         minimum: 0.1
         maximum: 0.3
     size_info: '(Body size source: IPC-SM-782 page 72, https://www.pcb-3d.com/wordpress/wp-content/uploads/ipc-sm-782a_amendment_1_and_2.pdf)'
+    ipc_reference: "ipc_spec_smaller_0603"
