--- a/scripts/SMD_2terminal_chip_molded/size_definitions/default_chip.yaml
+++ b/scripts/SMD_2terminal_chip_molded/size_definitions/default_chip.yaml
@@ -120,7 +120,7 @@ SMD_2512:
       maximum: 5.22
     size_info: '(Body size source: http://www.tortai-tech.com/upload/download/2011102023233369053.pdf)'
 
-#Could not find any LED, diode or fuse in this body size
+#Could not find any LED, diode, inductor or fuse in this body size
 # SMD_2816:
     # code_imperial: "2816"
     # code_metric: "7142"
